Scale the app to more users

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ ul li {
   padding: 5px;
   background: #f4f4f4;
   margin: 5px 0;
+  padding-inline: 20px;
 }
 
 header {
@@ -41,7 +42,7 @@ header {
   display: block;
 }
 
-#my-form input[type="text"] {
+#my-form input {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
@@ -58,6 +59,9 @@ header {
   color: #fff;
   border-radius: 5px;
   margin: 5px 0;
+  cursor: pointer;
+  font-size: 18px;
+  text-transform: uppercase;
 }
 
 .btn:hover {
