--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -18,6 +19,10 @@ ul li {
   background: #f4f4f4;
   margin: 5px 0;
   padding-inline: 20px;
+}
+
+ul li span {
+  font-weight: bold;
 }
 
 header {
@@ -61,15 +66,24 @@ header {
   margin: 5px 0;
   cursor: pointer;
   font-size: 18px;
-  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .btn:hover {
   background: #444;
 }
 
-.delBtn {
-  display: block;
+li .editBtn {
+  background: green;
+  margin-right: 5px;
+}
+
+.editBtn:hover {
+  background: rgb(1, 108, 1);
+}
+.delBtn,
+.editBtn {
+  display: inline-block;
   padding: 10px 15px;
   background: rgb(218, 3, 3);
   border: 0;
@@ -91,6 +105,6 @@ header {
 .error {
   background: orangered;
   color: #fff;
-  padding: 5px;
-  margin: 5px;
+  padding: 5px 10px;
+  margin: 5px 0;
 }
